src/test/deca/context/valid/created/sans_objet/if_rule.deca
// Règles attendues (occurences dans lignes du fichier résultat):
// Program 25:0
//      ListDeclClass
//      Main 25:0
//          ListDeclVar
//          ListInst
//              IfThenElse 26:4
//                  BooleanLiteral 26:8
//                  boolean
//                  ListInst
//                      Println 27:8
//                          ListExpr
//                              StringLiteral 27:16
//                              string
//                  ListInst
//
// Auteur: Carmel
//
// Historique:
//    cree le 14/01/2024
//
// Description:
//    test de programme contextuellement correct.

{
    if (true) {
        println("Hello world !");
    }
}