src/test/deca/context/invalid/created/rule3.31/noprint.deca
// Résultat erreur:
//    15:4
//    le type doit être : “int, float, string” (règle 3.31)
//
// Description:
//    tests de programme incorrect contextuellement ( le type doit être : “int, float, string”)
//
// Auteur:
//    Carmel
//
// Historique:
//    cree le 13/01/2024

{
    println(true);
}